[express-server-ts] remove deprecated routes and add region filtering
